--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "creatomate": "^1.2.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "form-data": "^4.0.4",
+    "formidable": "^3.5.4",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
@@ -60,12 +62,13 @@
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "recordrtc": "^5.6.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
-    "zod": "^4.1.8"
+    "zod": "^3.23.8"
   }
 }
